--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon dist/server.ts"
+    "start": "nodemon dist/server.js"
   },
   "keywords": [],
   "author": "",
