--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon dist/server.js"
+    "dev": "nodemon dist/server.js",
+    "start": "pm2 start dist/server.js --no-daemon"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "@types/express": "^5.0.3",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
+    "pm2": "^6.0.8",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
